# oop_proj_wargame

./: .gitignore  README.md  docker_main.sh  main.py  pyproject.toml  settings.py
bots/: Kevin(0).py  Kevin2.py  __init__.py  andrew.py  fall_bot.py  greedy_bot.py  kevin.py  kevin3.py  lazy_bot.py  ping_bot.py  sample_bot.py  smart_bot.py
resources/: countries.py  weapons.py
teaching-examples/: code_optimization.py
visualizer/: countries.py  country.py  explosions.py  lasers.py  particles.py  weapons.py
