[project]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
[tool.poetry]
name = "oop-proj-wargame"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Chengzong Li <chengzongli.ee10@nycu.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
